<resources>
    <string name="app_name">Movie</string>
    <string name="movie_poster">poster</string>
    <string name="ad_image">AdImg</string>
    <string name="btn_reservation">지금 예매</string>

    <string name="title_data">영화 제목</string>
    <string name="release_time_data">상영일</string>
    <string name="runtime_data">러닝타임</string>
    <string name="movieDetail_data">영화 줄거리</string>

    <string name="reservation_complete">예매 완료</string>

    <string name="release_time_label">상영일 : </string>
    <string name="runtime_label">러닝타임 : </string>

    <string name="theater_1">주엽 극장</string>
    <string name="theater_2">정발산 극장</string>
    <string name="theater_3">백석 극장</string>

    <string name="reservation_notes">영화 상영 시작 시간 15분 전까지 \n 취소가 가능합니다.</string>
    <string name="reservation_dateTime">%1$s %2$s</string>

    <string name="reservation_moviegoer_label">일반 </string>
    <string name="reservation_moviegoer_data">%1$d명</string>

    <string name="ticket_count_format">%1$d명</string>
    <string name="ticket_price_format">%1$d원</string>

    <string name="reservation_seat_number">A1, A2</string>
    <string name="theater_name">OO 극장</string>
    <string name="tickets_price_format">%1$d원</string>
    <string name="payment_method">(현장 결제)</string>

    <string name="blank_setting_fragment">setting fragment</string>
    <style name="reservation_details_empty_state_text">예매 내역이 없습니다.</style>

    <string name="menu_reservation_details">예매 내역</string>
    <string name="menu_home">홈</string>
    <string name="menu_setting">설정</string>

    <string name="reservation_date">%1$s</string>
    <string name="reservation_time">%1$s</string>
    <string name="reservation_details_empty_state_text" translatable="false">예매 내역이 없습니다.</string>

</resources>
