<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="reservedMovie"
            type="com.example.movie.model.ReservedMovie" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <LinearLayout
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_reservation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation_date"
                android:textSize="12sp"
                android:textColor="@color/dark_grey"/>

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/light_grey" />

            <TextView
                android:id="@+id/tv_reservation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation_time"
                android:textSize="12sp"
                android:textColor="@color/dark_grey"/>

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/light_grey" />

            <TextView
                android:id="@+id/tv_theater_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theater_name"
                android:textSize="12sp"
                android:textColor="@color/dark_grey"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/title_data"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/forest_green"
            app:layout_constraintTop_toBottomOf="@+id/details_container"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
